Fixed Z-Index Issue And Added Another Status Message In Modal

--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,14 @@
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -85,7 +87,7 @@ ion-item {
   background-color: rgba(0, 0, 0, 0.6);
   /* Overlay effect: translucent background: black w/ partial opacity */
 
-  z-index: 1; /* Overlay effect: positioned over other containers */
+  z-index: 11; /* Overlay effect: positioned over other containers */
   width: 100vw; /* Full width */
   height: 100vh; /* Full height */
   position: fixed; /* Fix position on the top-left corner*/
@@ -145,7 +147,8 @@ ion-item {
   margin: 30px 0;
 
   display: flex;
-  justify-content: center;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
   align-items: center;
 
   margin-bottom: 36px;
